# hashtree-ci

./: Cargo.toml  README.md
crates/ci-core/: Cargo.toml
crates/ci-core/src/: config.rs  job.rs  lib.rs  result.rs  runner.rs
crates/ci-runner/: Cargo.toml
crates/ci-runner/src/: action.rs  executor.rs  main.rs  publisher.rs  watcher.rs
crates/ci-runner/tests/: e2e.rs
crates/ci-store/: Cargo.toml
crates/ci-store/src/: hashtree.rs  lib.rs  memory.rs
crates/ci-web/: Cargo.toml
crates/ci-web/src/: api.rs  lib.rs
crates/ci-workflow/: Cargo.toml
crates/ci-workflow/src/: lib.rs  parser.rs
docker/: ci-runner.Dockerfile
docs/: npub-path-design.md
fixtures/: sample-ci-result.json
