[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mmalmi/hashtree-ci"
authors = ["Martti Malmi <mmalmi@gmail.com>"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Nostr (for npub/nsec handling)
nostr = { version = "0.35", features = ["nip44"] }
nostr-sdk = { version = "0.35", default-features = false }

# Hashtree integration
hashtree-core = { version = "0.2.1" }
hashtree-lmdb = { version = "0.2.1" }

# Config
toml = "0.8"
dirs = "5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Web
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Container execution
bollard = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"

# Internal crates
ci-core = { path = "crates/ci-core" }
ci-workflow = { path = "crates/ci-workflow" }
ci-runner = { path = "crates/ci-runner" }
ci-web = { path = "crates/ci-web" }
ci-store = { path = "crates/ci-store" }
