[package]
name = "ci-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "htci"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
ci-workflow = { workspace = true }
ci-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
bollard = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
