[package]
name = "ci-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ci-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
hashtree-core = { workspace = true }
hashtree-lmdb = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
