[package]
name = "ci-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ci-core = { workspace = true }
ci-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
